[package]
name = "pls"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "winbase"] }
winit = "0.29.4"
